--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
-        android:background="@drawable/snooker">
+        android:layout_weight="4">
 
 
         <!-- Player 1 -->
@@ -44,7 +43,7 @@
                 android:gravity="center_horizontal"
                 android:text="0"
                 android:textColor="@android:color/white"
-                android:textSize="80dp" />
+                android:textSize="80sp" />
 
             <ImageView
                 android:id="@+id/set_player_1"
@@ -84,7 +83,7 @@
                 android:layout_gravity="center"
                 android:text="0"
                 android:textColor="@android:color/white"
-                android:textSize="80dp" />
+                android:textSize="80sp" />
 
             <ImageView
                 android:id="@+id/set_player_2"
@@ -110,51 +109,27 @@
             android:layout_height="0dp"
             android:layout_weight="8"
             android:background="@drawable/snooker_table"
-            android:padding="25dp">
+            android:paddingLeft="35dp">
 
             <Button
                 android:id="@+id/button_red"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_red" />
+                android:background="@drawable/shape_red"
+                style="@style/CustomHorizontalButtonStyle" />
 
             <Button
                 android:id="@+id/button_black"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_black" />
+                android:background="@drawable/shape_black"
+                style="@style/CustomHorizontalButtonStyle"/>
 
             <Button
                 android:id="@+id/button_pink"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_pink" />
+                android:background="@drawable/shape_pink"
+                style="@style/CustomHorizontalButtonStyle"/>
 
             <Button
                 android:id="@+id/button_blue"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginBottom="20dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_blue" />
+                android:background="@drawable/shape_blue"
+                style="@style/CustomHorizontalButtonStyle"/>
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -165,31 +140,19 @@
 
                 <Button
                     android:id="@+id/button_yellow"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="15dp"
-                    android:background="@drawable/shape_yellow" />
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/shape_yellow"
+                    style="@style/CustomVerticalButtonStyle"/>
 
                 <Button
                     android:id="@+id/button_brown"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape_brown" />
+                    android:background="@drawable/shape_brown"
+                    style="@style/CustomVerticalButtonStyle"/>
 
                 <Button
                     android:id="@+id/button_green"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="15dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@drawable/shape_green" />
+                    android:background="@drawable/shape_green"
+                    style="@style/CustomVerticalButtonStyle"/>
 
 
             </LinearLayout>
